style.css
body{
	padding:20px;
	font-family:Helvetica, sans-serif;
	position: relative;
}
.axis  {
  	fill: none;
	stroke-width:4px;
  	shape-rendering: crispEdges;
	z-index:0;
  	width: 20px; }
line{
		z-index:0;
}
.axis text {  
	z-index:1;
    font-size: 50px;
}

.axisControl{
	
	fill: #5eb2ec;
	font-size: 160%;
}
polygon {
	fill: #5eb2ec;
	z-index:10;
	opacity:0.6;
	
}
.axis line{
	fill: none;
	stroke :black;
	shape-rendering: crispEdges;
	width: 20px; 

	}
#nomoline{
	opacity:.6;
	 z-index:5;
	 width: 5px;
	stroke: #5eb2ec;
}
input{
  width: 30px;
}
input#buttonExecute{
  width: 60px;
}
select#selector{
	width: 200px;
	line-height:700px;
	font-size:80px;
	margin-right:20px;

}


.axis text {
  font-family: sans-serif;
  font-size: 11px; }

*::selection {
    background:transparent;
}

*::-moz-selection {
    background:transparent;
}

*::-webkit-selection {
    background:transparent;
}

